Refactor meta.yaml to load project name and version

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,10 +1,7 @@
-{% set name = "proptimus-raphan" %}
-{% set version_match = load_file_regex(
-    load_file='../pyproject.toml',
-    regex_pattern='^version = "([^"]+)"',
-    from_recipe_dir=True
-) %}
-{% set version = version_match[1] %}
+{% set pyproject = load_file_data('../pyproject.toml') %}
+{% set project = pyproject.get('project', {}) %}
+{% set name = project.get('name') %}
+{% set version = project.get('version') %}
 
 package:
   name: {{ name }}
